--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.3.1"
   },
   "build": {
     "productName": "Reactron",
