--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-2": "^7.0.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.0.0",
@@ -32,7 +38,10 @@
     "webpack-cli": "^3.1.2",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.3.1"
+    "sass-loader": "^7.3.1",
+    "react-dom": "^16.5.2",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1"
   },
   "build": {
     "productName": "Invoice App",
