--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "path": "^0.12.7",
     "react": "^16.6.3",
+    "react-datepicker": "^2.10.0",
     "react-dom": "^16.6.3",
     "webpack-dev-server": "^3.3.1"
   },
