form for product description added, dbhelper file for productsList component created and importedd

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "dist": "electron-builder"
   },
   "dependencies": {
+    "@ag-grid-community/all-modules": "^22.0.0",
+    "@ag-grid-community/client-side-row-model": "^22.0.0",
+    "@ag-grid-community/react": "^22.0.0",
+    "firebase": "^7.3.0",
     "moment": "^2.24.0",
     "path": "^0.12.7",
     "react": "^16.6.3",
