--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ag-grid-community/client-side-row-model": "^22.0.0",
     "@ag-grid-community/react": "^22.0.0",
     "firebase": "^7.3.0",
+    "formik": "^2.0.4",
     "moment": "^2.24.0",
     "path": "^0.12.7",
     "react": "^16.6.3",
