--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@ag-grid-community/all-modules": "^22.0.0",
     "@ag-grid-community/client-side-row-model": "^22.0.0",
     "@ag-grid-community/react": "^22.0.0",
+    "bootstrap": "^4.3.1",
     "firebase": "^7.3.0",
     "formik": "^2.0.4",
     "moment": "^2.24.0",
     "path": "^0.12.7",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.10.0",
     "react-dom": "^16.6.3",
     "webpack-dev-server": "^3.3.1"
