--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
-    "moment-locales-webpack-plugin": "^1.1.0",
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -43,16 +42,18 @@
     "css-loader": "^2.0.0",
     "electron": "^3.0.11",
     "electron-builder": "^20.38.3",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
     "mini-css-extract-plugin": "^0.4.3",
+    "moment-locales-webpack-plugin": "^1.1.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.3.1",
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   },
   "build": {
     "productName": "Invoice App",
